# plasma-todo-widget

./: CMakeLists.txt  README.md  plasma-todo-widget.kdev4
.kdev4/: plasma-todo-widget.kdev4
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: configGeneral.qml  main.qml
